# gpagent

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Qml/: Qml.qmlproject  Qml.qmlproject.qtds  Qml.qrc  qtquickcontrols2.conf
Qml/Qml/: Constants.qml  qmldir
Qml/Qml/designer/: plugin.metainfo
Qml/QmlContent/: App.qml  Chat.qml  Settings.qml  Sidebar.qml
docs/: ARCHITECTURE.md  USER_PROMPT_FLOW.md
include/gpagent/agent/: executor.hpp  orchestrator.hpp  planner.hpp
include/gpagent/context/: context_manager.hpp
include/gpagent/core/: config.hpp  errors.hpp  result.hpp  types.hpp  uuid.hpp
include/gpagent/llm/: llm_gateway.hpp
include/gpagent/llm/providers/: claude.hpp  gemini.hpp
include/gpagent/memory/: checkpointer.hpp  episodic_memory.hpp  memory_manager.hpp  session_state.hpp  thread_memory.hpp
include/gpagent/tools/: tool_executor.hpp  tool_registry.hpp  tool_spec.hpp
include/gpagent/trm/: episode_buffer.hpp  trm_model.hpp  trm_trainer.hpp
include/gpagent/ui/: chat_backend.hpp  config_manager.hpp  message_model.hpp  qml_register.hpp
src/: main.cpp
src/agent/: executor.cpp  orchestrator.cpp  planner.cpp
src/context/: compactor.cpp  context_builder.cpp  context_manager.cpp
src/core/: config.cpp  errors.cpp  types.cpp  uuid.cpp
src/llm/: llm_gateway.cpp  tokenizer.cpp
src/llm/providers/: claude.cpp  gemini.cpp
src/memory/: checkpointer.cpp  episodic_memory.cpp  memory_manager.cpp  session_state.cpp  thread_memory.cpp
src/tools/: tool_executor.cpp  tool_registry.cpp
src/tools/builtin/: bash_tool.cpp  code_tools.cpp  file_tools.cpp  git_tools.cpp  interaction_tools.cpp  memory_tools.cpp  search_tools.cpp  web_tools.cpp
src/trm/: episode_buffer.cpp  trm_model.cpp  trm_trainer.cpp
src/ui/: chat_backend.cpp  config_manager.cpp  message_model.cpp  qml_register.cpp
tests/unit/: test_config.cpp  test_main.cpp  test_result.cpp  test_uuid.cpp
